Problem6 | 기능 구현 사항 & 정복 처리 함수 구현